baml_language/crates/baml_tests/tests/snapshots/type_error_repro__bytecode_1d_array_read_through_field.snap
---
source: crates/baml_tests/tests/type_error_repro.rs
expression: output.bytecode
---
function Container.get(self: null, idx: int) -> string {
    load_var self
    load_field .items
    load_var idx
    load_array_element
    return
}

function main() -> string {
    alloc_instance user.Container
    load_const "a"
    load_const "b"
    load_const "c"
    alloc_array 3
    init_field .items
    load_const 1
    call user.Container.get
    return
}
