baml_language/crates/baml_tests/tests/snapshots/type_error_repro__bytecode_1d_array_write_local.snap
---
source: crates/baml_tests/tests/type_error_repro.rs
expression: output.bytecode
---
function main() -> string {
    load_const "a"
    load_const "b"
    load_const "c"
    alloc_array 3
    store_var arr
    load_var arr
    load_const 1
    load_const "z"
    store_array_element
    load_var arr
    load_const 1
    load_array_element
    return
}
