baml_language/crates/baml_tests/tests/snapshots/type_error_repro__bytecode_1d_array_write_through_field.snap
---
source: crates/baml_tests/tests/type_error_repro.rs
expression: output.bytecode
---
function Container.set(self: null, idx: int, val: string) -> null {
    load_var self
    load_field .items
    load_var idx
    load_var val
    store_array_element
    load_const null
    return
}

function main() -> null {
    alloc_instance user.Container
    load_const "a"
    load_const "b"
    load_const "c"
    alloc_array 3
    init_field .items
    load_const 1
    load_const "z"
    call user.Container.set
    pop 1
    load_const null
    return
}
