baml_language/crates/baml_tests/tests/snapshots/type_error_repro__bytecode_2d_array_write_local.snap
---
source: crates/baml_tests/tests/type_error_repro.rs
expression: output.bytecode
---
function main() -> string {
    load_const "a"
    load_const "b"
    alloc_array 2
    load_const "c"
    load_const "d"
    alloc_array 2
    alloc_array 2
    store_var cells
    load_var cells
    load_const 1
    load_array_element
    load_const 0
    load_const "x"
    store_array_element
    load_var cells
    load_const 1
    load_array_element
    load_const 0
    load_array_element
    return
}
