baml_language/crates/baml_tests/tests/snapshots/type_error_repro__bytecode_2d_array_write_through_field.snap
---
source: crates/baml_tests/tests/type_error_repro.rs
expression: output.bytecode
---
function Grid.set(self: null, row: int, col: int, val: string) -> null {
    load_var self
    load_field .cells
    load_var row
    load_array_element
    load_var col
    load_var val
    store_array_element
    load_const null
    return
}

function main() -> null {
    alloc_instance user.Grid
    load_const "a"
    load_const "b"
    alloc_array 2
    load_const "c"
    load_const "d"
    alloc_array 2
    alloc_array 2
    init_field .cells
    load_const 1
    load_const 0
    load_const "x"
    call user.Grid.set
    pop 1
    load_const null
    return
}
