baml_language/crates/baml_tests/tests/snapshots/type_error_repro__bytecode_map_write_local.snap
---
source: crates/baml_tests/tests/type_error_repro.rs
expression: output.bytecode
---
function main() -> int {
    alloc_map 0
    store_var scores
    load_var scores
    load_const "alice"
    load_const 100
    store_map_element
    load_var scores
    load_const "alice"
    load_map_element
    return
}
