baml_language/crates/baml_tests/tests/snapshots/type_error_repro__bytecode_map_write_through_field.snap
---
source: crates/baml_tests/tests/type_error_repro.rs
expression: output.bytecode
---
function Scores.set(self: null, key: string, val: int) -> null {
    load_var self
    load_field .data
    load_var key
    load_var val
    store_map_element
    load_const null
    return
}

function main() -> null {
    alloc_instance Scores
    alloc_map 0
    init_field .data
    load_const "alice"
    load_const 100
    call user.Scores.set
    pop 1
    load_const null
    return
}
